--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,229 @@
-.App {
-  text-align: center;
+body {
+  background-color: #f5f5f5;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li > a {
+  text-decoration: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.active > li {
+  font-size: 30px !important;
+  color: #000;
+  text-decoration-line: none;
+  border-bottom: 4px solid #ef115e;
+  width: 180px;
+  text-align: center !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.active > li > a {
+  font-size: 30px !important;
+  text-align: center !important;
+}
+li > a {
+  color: #c2c2c2 !important;
+  font-size: 20px !important;
+  font-weight: 600 !important;
+}
+.nav-item {
+  margin-right: 120px !important;
+}
+.search {
+  background-color: #f5f5f5 !important;
+  margin-bottom: 20px !important;
+  width: 800px;
+  border-top: none;
+  border-left: none !important;
+  border-right: none !important;
+  border-radius: 0% !important;
+  outline: none !important;
+  outline-width: 0 !important;
+  box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  color: black !important;
+  font-weight: 500 !important;
+  font-size: large !important;
+}
+.search::placeholder {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.search:focus {
+  outline: none;
+  outline-width: 0 !important;
+  box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
 }
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none !important;
+  outline-width: 0 !important;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+}
+.card {
+  background-color: black;
+  border: none;
+  margin-right: 60px;
+}
+.cardImage {
+  border: none;
+}
+.cardText {
+  background-color: white;
+  border-radius: 20px;
+}
+.cards {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.card2contentParent {
+  background-color: white;
+  border-radius: 20px;
+}
+.card2content {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+}
+.cardTitleParent2 {
+  color: white;
+  text-align: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.card2title {
+  height: 140px;
+  background-color: inherit !important;
+}
+h5 {
+  font-weight: 600 !important;
+  text-align: center !important;
+  justify-content: center !important;
+  font-size: 1.2rem;
+  color: white;
+  justify-content: center;
+  text-align: center;
+  padding: 50px 0;
+  font-size: 1.25rem !important;
+  padding-top: 60px !important;
+}
+.card2text {
+  background-color: white;
+  color: gray;
+  font-weight: 600;
+}
+.cardTitleParent {
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  background-color: black;
+}
+.cards2 {
+  margin-bottom: 20px;
+  display: flex;
+}
+.cardComp2 {
+  margin-right: 50px;
+}
+.mainBody {
+  margin-top: 10px !important;
+  margin-left: 80px !important;
+}
+.topnavbell {
+  margin-left: 1600px !important;
+  margin-right: 50px !important;
+  margin-top: 15px;
+}
+.navbar {
+  margin-bottom: 5px;
+}
+.searchBAR {
+  margin-bottom: 20px;
+}
+.loginInput {
+  border-top: none;
+  border-left: none !important;
+  border-right: none !important;
+  border-radius: 0% !important;
+  outline: none !important;
+  outline-width: 0 !important;
+  box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  width: 600px !important;
+  background-color: #ef115e !important ;
+  margin-right: 20px !important;
+}
+.loginForm {
+  margin-left: 100px !important;
+  margin-top: 100px !important;
+  width: 450px !important;
+  height: 600px !important;
+  padding: 20px !important;
+  border-radius: 12px !important;
+  background: #ef115e !important;
+}
+.loginForm h1 {
+  background: inherit;
+  font-style: italic;
+  color: white;
+  font-size: x-large;
+  text-align: center;
+  margin-bottom: 100px;
+  font-weight: bold;
+}
+.loginForm .logForm .loginFormGroup {
+  margin-bottom: 12px !important;
+  background-color: #ef115e !important;
+}
+.loginForm .logForm .loginFormGroup .loginFormGroupControl {
+  width: 100%;
+}
+.loginForm .logForm .loginFormGroup .loginFormGroupControl::placeholder {
+  color: white;
+}
+.loginForm .logForm .loginFormGroup input {
+  font-size: 20px;
+  margin-top: 15px;
+  border: 1px solid white !important;
+  background-color: #ef115e !important;
+  border-top: none !important;
+  border-left: none !important;
+  border-right: none !important;
+  border-radius: 0% !important;
+  outline: none !important;
+  outline-width: 0 !important;
+  box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  margin-bottom: 40px !important;
+}
+.loginForm .logForm {
+  background-color: #ef115e !important;
+}
+.loginForm .logForm .button {
+  background-color: white !important;
+  border: none !important;
+  font-weight: 500 !important;
+  margin-top: 20px !important;
+}
+.loginForm .logForm .button a {
+  text-decoration: none !important;
+  background-color: white !important;
+  color: #ef115e !important;
+}
+.loginParent {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between;
+  margin-left: 450px;
+  margin-right: 200px;
+}
+.button {
+  height: 40px !important;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border-radius: 5px !important;
 }
