--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,7 @@ h5 {
   border: none !important;
   font-weight: 500 !important;
   margin-top: 20px !important;
+  margin-bottom: 10px !important;
 }
 .loginForm .logForm .button a {
   text-decoration: none !important;
@@ -227,3 +228,12 @@ h5 {
 
   border-radius: 5px !important;
 }
+a {
+  background: #ef115e;
+  margin-top: 20px !important;
+}
+.linktoreg{
+  color: white;
+text-decoration: none;
+font-size: large;}
+.linktoreg:hover{color:white;}
